[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/skins/default/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/skins/default/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/main.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 10
outline_color = Color( 0.866667, 0.352941, 0.352941, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="Node2D"]
script = ExtResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 72 )

[node name="Strums" type="Node2D" parent="."]
position = Vector2( 640, 636 )

[node name="YouDied" type="Label" parent="."]
visible = false
margin_left = 360.0
margin_top = 192.0
margin_right = 921.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 1 )
text = "You died!"
align = 1

[node name="Accuracy" type="Label" parent="."]
margin_left = -212.0
margin_top = 11.0
margin_right = 1264.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "100%"
align = 2

[node name="InfoText" type="Label" parent="."]
margin_left = -212.0
margin_top = 267.0
margin_right = 1264.0
margin_bottom = 452.0
custom_constants/line_spacing = -5
custom_fonts/font = SubResource( 4 )
text = "Marvelous: 0
Perfect: 0
Good: 0
Bad: 0
Trash : 0
Misses: 0"
align = 2

[node name="Combo" type="Label" parent="."]
margin_left = -212.0
margin_top = 43.0
margin_right = 1264.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
